--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,14 @@ project(FourierVisualizer CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wno-enum-compare")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O4 -Wno-enum-compare")
 
 # Add the executable with source files
 add_executable(FV src/main.cpp
-                  src/Wav.cpp
-                  src/SigVisualizer.cpp
-                  src/Sigproccesing.cpp)
+        src/Wav.cpp
+        src/SigVisualizer.cpp
+        src/Sigproccesing.cpp
+)
 
 # Set the paths for Raylib include and lib directories
 set(RAYLIB_INCLUDE "${CMAKE_SOURCE_DIR}/libs/raylib/include")
@@ -26,4 +27,4 @@ target_link_libraries(FV "${RAYLIB_LIB}/libraylib.a")
 # Add system libraries required by Raylib on Windows
 if (WIN32)
     target_link_libraries(FV winmm)
-endif()
+endif ()
