Wav is now a class, made App class (runs event loop from constructor), all DFT stuff is commented out needs to fit new program structure, Main looks fine as hell now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(FV src/main.cpp
         src/Wav.cpp
         src/SigVisualizer.cpp
         src/Sigproccesing.cpp
+        src/App.cpp
+        src/App.h
 )
 
 # Set the paths for Raylib include and lib directories
