implemented functionality to draw matlab esque zoom window works quite well if i were to say so myself

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(FourierVisualizer CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wno-enum-compare")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wno-enum-compare -Wall")
 
 # Add the executable with source files
 add_executable(FV src/main.cpp
@@ -14,7 +14,7 @@ add_executable(FV src/main.cpp
         src/UI.cpp
 )
 
-# Set the paths for Raylib include and lib directories
+# Set the paths for Raylib and Raygui include and lib directories
 set(RAYLIB_INCLUDE "${CMAKE_SOURCE_DIR}/libs/raylib/include")
 set(RAYLIB_LIB "${CMAKE_SOURCE_DIR}/libs/raylib/lib")
 set(RAYGUI_INCLUDE "${CMAKE_SOURCE_DIR}/libs/raygui/include")
@@ -23,10 +23,8 @@ set(RAYGUI_INCLUDE "${CMAKE_SOURCE_DIR}/libs/raygui/include")
 # Include the Raylib include directory
 target_include_directories(FV PUBLIC ${RAYLIB_INCLUDE} ${RAYGUI_INCLUDE})
 
-# Link with the Raylib dynamic library (libraylibdll.a)
 target_link_libraries(FV "${RAYLIB_LIB}/libraylib.a")
 
-# Add system libraries required by Raylib on Windows
 if (WIN32)
     target_link_libraries(FV winmm)
 endif ()
